src/test/deca/context/invalid/created/declClass/decl_class.deca
// Description :
//      Class herite d'elle meme
//
// Resultats :
//      Ligne 7 : Type not defined

class A extends A {

}
